
Argh.  How long has that extra 's' on the end of query_log() been
there? :P
----------------------------------------------------------------------
Mon Feb 25 19:00:20 2002                        Michael Jennings (mej)

Updated Debian changelog
----------------------------------------------------------------------
Tue Feb 26 15:49:08 2002                        Michael Jennings (mej)

Fixed the usage of $EDITOR in case it's more than one word.
----------------------------------------------------------------------
Tue Feb 26 15:58:10 2002                        Michael Jennings (mej)

If arguments are given to mzput without -a or -r, assume -x, but do
the ChangeLog.
----------------------------------------------------------------------
Tue Feb 26 16:47:34 2002                        Michael Jennings (mej)

Better finding of ChangeLog...I hope.
----------------------------------------------------------------------
Tue Feb 26 16:51:05 2002                        Michael Jennings (mej)

Cosmetic changes.  I'm testing the changelog finder thingie. :)
----------------------------------------------------------------------
Tue Feb 26 16:52:17 2002                        Michael Jennings (mej)

Still testing...
----------------------------------------------------------------------
Tue Feb 26 16:58:39 2002                        Michael Jennings (mej)

More testing.
----------------------------------------------------------------------
Tue Feb 26 17:01:21 2002                        Michael Jennings (mej)

Argh...it broke.
----------------------------------------------------------------------
Tue Feb 26 17:03:03 2002                        Michael Jennings (mej)

Still fixing stuff...
----------------------------------------------------------------------
Tue Feb 26 17:05:14 2002                        Michael Jennings (mej)

Okay, let's see if *this* works too....
----------------------------------------------------------------------